# meshtrove

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  remote-docker-compose.yaml
backend/: Cargo.toml  build.rs
backend/.sqlx/: query-0011f779e92a2800de023250fc91bd6cc282dbe41f6852d376ff639b1c14d96d.json  query-0113d52fc06420f93e13aea237a4b0246cc217f05e91ac0ba108dfc08eecf816.json  query-021807610dbb4eeece13c7f77d8513f9f5369616b873b81ac8033df5782586e8.json  query-0276bab8318875507e74cb82b64e072e14a698af3058e8696fc9c7a4a9cb7877.json  query-02f3578e6edfb8298d5db58cbc72a9b3d0751c93e03a425719cacadb35581a22.json  query-0421729923d778214b984a0f445e7fb6cce3dea146bbe2e98d5b5e9f355a6758.json  query-047f489bc256c77eb2a15ba7c77c59a099a60d7e2c31f4783f6b27c8c56f910b.json  query-04a3aaa3b53482d9c24d32626f0d974157cd8cb91666c84a4d885ece346186ca.json  query-051e16887a19cb3949eddae225d78b9aeef25ee4d65b1cdaa5c554ee5d776fa3.json  query-06fcc3a1975b178331b2dbffe2f4ad808e5577c77abc47d92d2b4c36eaa94f6e.json  query-083e3bbb09d431f197407e24cf6332c1c1e97085d6fbab1b95d3130d1c21823b.json  query-08571ba8e460d6437a6d392a9c9971b8afe4cbcf298cb3270459de6f8af3fa6f.json  query-0a8ef7fc68527d8ecdeb18ed7c4773f2ea173eae9dfa46fba42aec6cbf8c2a8f.json  query-0aafd3a94eb97a963d8f0f60774e71031fa49a842e068e572fb7acf857930206.json  query-0baea489a1f565cf5a0929d02e9ecc709508361b62ff56e9c1eea9a657129347.json  query-0be05d9c90e662144b28dc194dafdfc8fd6c9711340aaab49b026f358203695f.json  (+406 more)
backend/src/: config.rs  (+5 more)
(+152 files in other folders)
