[package]
name = "meshtrove"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.12.6", features = ["cookie-private"] }
base64 = "0.22.1"
bytes = "1.12.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
derive_more = { version = "2.1.1", features = ["debug"] }
dotenvy = "0.15.7"
fancy-regex = "0.18.0"
futures = "0.3.32"
hex = "0.4.3"
mime_guess = "2.0.5"
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "uuid", "chrono", "json", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.30.0"
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
zip = "8.6.0"
